package edu.fiuba.algo3;

public interface Modificador {

    void cruzarCon(Jugador jugador);
}
